# opencv-python

./: README.md  setup.py  travis_config.sh
.github/workflows/: build_wheels_linux.yml  build_wheels_linux_arm.yml  build_wheels_macos.yml  build_wheels_macos_m1.yml  build_wheels_manylinux.yml  build_wheels_windows.yml  build_wheels_windows_freetype_manual.yml
docker/manylinux2014/: Dockerfile_aarch64  Dockerfile_i686  Dockerfile_x86_64
docker/manylinux_2_28/: Dockerfile_aarch64  Dockerfile_x86_64
docker/musllinux/: Dockerfile_x86_64
docker/musllinux_1_2/: Dockerfile_aarch64  Dockerfile_x86_64
freetype_patch/: CMakeLists.txt  FindFreetype.cmake  FindHarfBuzz.cmake
patches/: patchQtPlugins
